# Multiparty-Communication

./: .gitignore  README.md  install_emp_dependencies.py  loggingCommunicationBugs.md
ArithmeticSecretSharingMPC/src/: Party.h  ZmqPeerComm.h  config.h
ZeroMQ/: Makefile  netiomp_test  run_parties.sh  run_parties_tmux.sh
ZeroMQ/convenientScripts/: install.py
ZeroMQ/examples/: mpc_communication_example.cpp
ZeroMQ/src/: AdditiveSecretSharing.cpp  AdditiveSecretSharing.h  IMPCCommunication.h  INetIOMP.h  Message.cpp  NetIOMP.cpp  NetIOMP.h  NetIOMPDealerRouter.cpp  NetIOMPDealerRouter.h  NetIOMPFactory.cpp  NetIOMPFactory.h  NetIOMPReqRep.cpp  NetIOMPReqRep.h  Party.cpp  Party.h  ZMQMPCCommunication.cpp  ZMQMPCCommunication.h  config.h  main.cpp  netiomp_test
ZeroMQ/tests/: CMakeLists.txt  test_zmq_mpc_communication.cpp
ZeroMQ/tutorial/: CMakeLists.txt  README.md  build.sh  router_dealer_basic.cpp  router_dealer_official.cpp  test_advanced_dealers.sh  test_communication.sh  test_multiple_dealers.sh  zhelpers.hpp
scripts/: createNewBranch.sh
src/test/: CMakeLists.txt  NetIOMP.h  cmpc_config.h  test_netiomp.cpp
